package com.fresno.fs;

//manage constant variables
public interface FSConstant {
    String ROOT_NAME = "/";    //root
    int INDENT = 4;            //print indentation
}
