package com.fresno.fs;

public interface TreeDisplay {
    public void display(Node node);
}
