@startuml

title __ASSIGNMENT's Class Diagram__\n

  namespace com.fresno.fs {
    interface com.fresno.fs.Builder {
    }
  }
  

  namespace com.fresno.fs {
    class com.fresno.fs.DelVisitor {
    }
  }
  

  namespace com.fresno.fs {
    class com.fresno.fs.ExitProxy {
    }
  }
  

  namespace com.fresno.fs {
    class com.fresno.fs.ExitVisitor {
    }
  }
  

  namespace com.fresno.fs {
    interface com.fresno.fs.FSConstant {
    }
  }
  

  namespace com.fresno.fs {
    class com.fresno.fs.FSUtils {
    }
  }
  

  namespace com.fresno.fs {
    class com.fresno.fs.FileSystemBuilder {
    }
  }
  

  namespace com.fresno.fs {
    class com.fresno.fs.FileSystemClient {
    }
  }
  

  namespace com.fresno.fs {
    class com.fresno.fs.FileSystemDisplay {
    }
  }
  

  namespace com.fresno.fs {
    class com.fresno.fs.FooterTextDisplay {
    }
  }
  

  namespace com.fresno.fs {
    class com.fresno.fs.HeaderTextDisplay {
    }
  }
  

  namespace com.fresno.fs {
    class com.fresno.fs.LsVisitor {
    }
  }
  

  namespace com.fresno.fs {
    class com.fresno.fs.Node {
    }
  }
  

  namespace com.fresno.fs {
    interface com.fresno.fs.ReVisitor {
    }
  }
  

  namespace com.fresno.fs {
    class com.fresno.fs.ResizeVisitor {
    }
  }
  

  namespace com.fresno.fs {
    class com.fresno.fs.SizeVisitor {
    }
  }
  

  namespace com.fresno.fs {
    interface com.fresno.fs.TreeDisplay {
    }
  }
  

  namespace com.fresno.fs {
    class com.fresno.fs.TreeDisplayAdapter {
    }
  }
  

  namespace com.fresno.fs {
    interface com.fresno.fs.Visitor {
    }
  }
  

  com.fresno.fs.DelVisitor .up.|> com.fresno.fs.Visitor
  com.fresno.fs.ExitProxy .up.|> com.fresno.fs.Visitor
  com.fresno.fs.ExitProxy o-- com.fresno.fs.Visitor : exitVisitor
  com.fresno.fs.ExitVisitor .up.|> com.fresno.fs.Visitor
  com.fresno.fs.FileSystemBuilder .up.|> com.fresno.fs.Builder
  com.fresno.fs.FileSystemBuilder o-- com.fresno.fs.Node : curNode
  com.fresno.fs.FileSystemBuilder o-- com.fresno.fs.Visitor : delVisitor
  com.fresno.fs.FileSystemBuilder o-- com.fresno.fs.Visitor : deleteProxy
  com.fresno.fs.FileSystemBuilder o-- com.fresno.fs.Visitor : lsVisitor
  com.fresno.fs.FileSystemBuilder o-- com.fresno.fs.ReVisitor : reSizeVisitor
  com.fresno.fs.FileSystemBuilder o-- com.fresno.fs.Node : root
  com.fresno.fs.FileSystemBuilder o-- com.fresno.fs.Visitor : sizeVisitor
  com.fresno.fs.FooterTextDisplay .up.|> com.fresno.fs.TreeDisplay
  com.fresno.fs.FooterTextDisplay o-- com.fresno.fs.TreeDisplay : treeDisplay
  com.fresno.fs.HeaderTextDisplay .up.|> com.fresno.fs.TreeDisplay
  com.fresno.fs.HeaderTextDisplay o-- com.fresno.fs.TreeDisplay : treeDisplay
  com.fresno.fs.LsVisitor .up.|> com.fresno.fs.Visitor
  com.fresno.fs.Node o-- com.fresno.fs.Node : parent
  com.fresno.fs.ResizeVisitor .up.|> com.fresno.fs.ReVisitor
  com.fresno.fs.ResizeVisitor o-- com.fresno.fs.TreeDisplay : observer
  com.fresno.fs.SizeVisitor .up.|> com.fresno.fs.Visitor
  com.fresno.fs.TreeDisplayAdapter .up.|> com.fresno.fs.TreeDisplay
  com.fresno.fs.TreeDisplayAdapter o-- com.fresno.fs.FileSystemDisplay : fsDisplay


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
